grammar.txt
<Program>: 
    <class>

<modAccessClass>: 
    public | 
    private

<class>: 
    <modAccessClass> class <id> {
        <initList>
        <mainMethod>
    }

<mainMethod>: 
    public static void main(String[] args) { 
        <statementList> 
    }

<id>: 
    id
<number>: 
    <sign> numeric_constant
<str_const>: 
    str_literal

<sign>: - | E

<loop>: 
    while (<expression>) {
        <statementList>
    }

<argsInitListChanger>: 
    <argsInitList> | 
    E
<argsInitList>:  
    <argInit> | 
    <argsInitList>, <argsInitList>
<argInit>: 
    <nativeDataType><rvalueFork> <id>

<rvalueFork>: [] | E

<argsCallListChanger>: 
    <argsCallList> | E
<argsCallList>: 
    <valueExpr> | 
    <argsCallList>, <argsCallList>

<valueExpr>: 
    <vExpr> |
    <number> |
    <str_const>

<vExpr>: 
    <id> <vExprChange>
<vExprChanger>: 
    <arrayMember> |
    (<argsCallListChanger>) | 
    = <expression> | 
    E

<conditional>: 
    if (<expression>) {
        <statementList>
    } <elseFork>

<elseFork>: 
    else <elseFork1> |
    E

<elseFork1>:
    <conditional> |
    { <statementList> }

<nativeDataType>: 
    int | 
    char

<initList>: // todo rewrite init here
    <initInsideClass> <initList> |
    E

// todo new init
<initInsideClass>: <nativeDataType> <firstForkInitInsideClass>
<firstForkInitInsideClass>: [] <id> <forkInitArray> |
    <id> <secondForkInitInsideClass> |
<secondForkInitInsideClass>: <forkInitFunc> |
    <forkInitVar>

<initInsideFunc>: <nativeDataType> <firstForkInitInsideFunc>
<firstForkInitInsideFunc>: [] <id> <forkInitArray> |
    <id> <forkInitVar>

/// new init

<init>: 
    <nativeDataType> <id> <forkInit>

<forkInit>: 
    <forkInitFunc> |
    <forkInitVar> |
    <forkInitArray>

<forkInitFunc>: 
    (<argsInitListChanger>) {
        <statementList>
    }
<forkInitVar>: 
    = <valueExpr>;
<forkInitArray>: 
    <arrayMember> = new <nativeDataType><arrayMember>;

<statementList>: 
    <statement> <statementList> |
    E

<condition>: < | > | == | !=

<operator>: + | - | * | / | =

<logicOperator>: && | ||

<arrayMember>: 
    [<arrayMemberFork>]

<arrayMemberFork>:
    <number> |
    <id>

<return>: 
    return <expression>;

<statement>: // todo rewrite init here
    { <statement> } |
    <loop> |
    <conditional> |
    <expression> |
    <initInsideFunc> |
    <return> |
    ;

<expression>:
    <arithmetic> <valueFork> |
    <expressionForkParen>

<expression2>:
    <arithmetic> <valueFork> <expressionOptionOperator>


<expressionForkParen>:
    (<expression>) <expressionOptionOperator> |
    <expression> <expressionOptionOperator>

<valueFork>: 
    <condition> <expression> |
    ; |
    E

<expressionOptionOperator>:
    <logicOperator> <expression> |
    <condition> <expression> |
    E

<arithmetic>: <secondPrior>

<secondPrior>: <firstPrior><secondPrior_>
<secondPrior_>: <secondPriorOper><firstPrior><secondPrior_>  | E

<firstPrior>: <group><firstPrior_>
<firstPrior_>: <firstPriorOper><group><firstPrior_> | E

<group>:
     (<arithmetic> <valueFork>) |
     <valueExpr>
<firstPriorOper>: * | -
<secondPriorOper>: + | - | =
